Updated the README.MD with requirements, Added configuration in pom.xml to hide the "Dynamic loading" warning, + small corrections elsewhere