@@ -91,9 +91,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
-                    <groups>MocksStubs</groups>
-                    <!-- Include or exclude specific tags -->
-                    <!-- <excludedGroups>tagForExcluded</excludedGroups> -->
+                    <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
